tests/fixtures/errors/e0505_equals_to_reg.mimz
// expect: E0505
module M {
  clock clk
  reset rst
  out y: bit
  reg v: bit = 0
  on rise(clk) {
    v <- 1
  }
  v = 1
  y = v
}
